# force_teaching

./: Readme.md  ibd_force_teaching.ros_package
ar_signal/: CMakeLists.txt  package.xml  setup.py
ar_signal/src/ar_signal/: ar_window_signal.py
force_teaching_msgs/: CMakeLists.txt  package.xml
force_teaching_msgs/action/: TeachIbDForce.action  TeachIbDLive.action
ibd_force_teaching/: CMakeLists.txt  README.md  package.xml  setup.py
ibd_force_teaching/cfg/: ibd_force_teaching.cfg
ibd_force_teaching/model/: ibd_force_teaching.ros_package
ibd_force_teaching/scripts/: ibd_force_teaching
ibd_force_teaching/src/ibd_force_teaching/: ibd_force_teaching_impl.py  ibd_force_teaching_ros.py
ibd_test_data/: CMakeLists.txt  README.md  package.xml  setup.py
ibd_test_data/cfg/: bridge_wrench_action.cfg  wrench_from_csv.cfg
ibd_test_data/data/: Trial_3.csv
ibd_test_data/launch/: pub_fake_data.launch
ibd_test_data/model/: ibd_test_data.ros_package
ibd_test_data/scripts/: bridge_wrench_action  wrench_from_csv
ibd_test_data/src/ibd_test_data/: bridge_wrench_action_impl.py  bridge_wrench_action_ros.py  wrench_from_csv_impl.py  wrench_from_csv_ros.py
