<?xml version="1.0"?>
<package>
  <name>ibd_test_data</name>
  <description>Package containing reference data for initial dev</description>
  <version>0.1.0</version>
  <!-- todo: should we differentiate both of them? -->
  <maintainer email="anthony.remazeilles@tecnalia.com">Anthony Remazeilles</maintainer>
  <author email="anthony.remazeilles@tecnalia.com">Anthony Remazeilles</author>
  <license>https://www.gnu.org/licenses/gpl.txt</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <!-- user dependencies -->
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- protected region additional package statements begin -->
  <!-- protected region additional package statements end -->

</package>
